Restore NetworkMergeAction as a CyAction with id "networkMergeAction"
Commit d058f2c replaced the CyAction with a TaskFactory, which removed the
service the PSICQUIC client looks up with "(id=networkMergeAction)" for its
"Merge networks manually..." button, leaving it with a "Network merge is
currently unavailable" error.

- NetworkMergeAction is back, registered as a CyAction with that id, in the
  same menu location (Tools > Merge > Networks...) and with the same enable
  condition the TaskFactory used: at least one network is loaded. It also
  overrides the menu callbacks, since AbstractCyAction's defaults bypass
  updateEnableState().
- NetworkMergeTaskFactory removed; the "network merge" command is unchanged.
- Unit test for the menu placement and enable condition (adds mockito-core,
  test scope).
- pom: version 3.9.6, https repositories, Java 17, Cytoscape API 3.10.0,
  newer plugins, pax-logging-api 2.0.16, osgi.core 7.0.0 (Felix 6 exports
  org.osgi.framework 1.9), UTF-8 source encoding, manifest execution for m2e,
  dropped the unused Apache repositories.
- Replace the removal-deprecated Integer(int) constructor with Integer.valueOf.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>